# pico-book

./: .gitignore  CMakeLists.txt
pico_book/: CMakeLists.txt  FreeRTOSConfig_examples_common.h
pico_book/src/: CMakeLists.txt  Mp3.cpp  Mp3.h  data_global.c  data_global.h  debug.h  heartRate.cpp  heartRate.h  irq.c  irq.cpp  irq.h  led.cpp  led.h  lightR.cpp  lightR.h  main.c  main.cpp  max30102.cpp  max30102.h  ssd1306_i2c.c  ssd1306_i2c.h  ws2812.cpp  ws2812.h  ws2812.pio  ws2812.pio.h
